--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pmvl6MII3o0HjB8Et2z0G6L/FASjKlPxdr5gBvCCGmw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=mcoo.me
+API_PREFIX=apidev
 
 LOG_CHANNEL=stack
 
