--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=zXjrT1kYL8DCfJF6d9KUWgRKontJhuo5
+JWT_TTL=120
